@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false


skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model US005 - Register a Store


class "System admin" as admin {}

class Employee{
    id
    name
    phoneNumber
    email
    civilNumber
    taxNumber
    password
}

class "System admin" as admin {}
class Agency {
    id
    name
    address
    phoneNumber
    email
}






Employee <|-- admin
admin "1" -- "*" Agency : register new >





@enduml